mule-user-guide/v/3.4/adding-community-runtime.adoc
= Adding Community Runtime

*Mule Studio* comes bundled with an embedded Enterprise runtime and a 30-day Enterprise trial license. You can add Community runtime to your Mule Studio instance to build and test applications in Mule's free, open-source runtime environment.

. In Studio, under the *Help* menu, select *Install New Software...*
. In the *Work With* field of the *Intall* wizard, use the drop-down menu to select.
+
`Mule ESB Runtime for Studio - http://studio.mulesoft.org/runtimes`
+
image:install_wizard.png[install_wizard]

. Check the box to select `MuleStudio Community Runtimes`, then click *Next*.
. Review the *Install Details*, then click *Next* to continue.
. Click to accept the terms and conditions of the license agreement, then click *Finish*. Studio installs the Community runtime.
. Click to agree to restart Mule Studio.
. When Mule restarts, under the File menu, select New > Mule Project.
. In the New Project wizard, use the drop-down menu for Server Runtimes to select Mule Server 3.4 CE.
+
image:newCEproject.png[newCEproject]

[WARNING]
====
*Are you behind a firewall?*

If you are on a network with a firewall restrictions, you may find that the Studio update sites are blocked and you are unable to download extensions.

Allow the following sites on your firewall to allow Studio to connect to the update sites:

http://studio.mulesoft.org

http://repository.mulesoft.org/connectors/releases/

http://download.eclipse.org/technology/m2e/releases

http://download.eclipse.org/eclipse/updates

http://subclipse.tigris.org

http://findbugs.cs.umd.edu/eclipse/
====

== Change Runtime of Existing Project

. Complete the procedure link:/mule-user-guide/v/3.4/adding-community-runtime[above] to install additional Mule runtimes on your instance of Studio.
. In the *Package Explorer* in Studio, double-click the `mule-project.xml` file to open it.
. Use the drop-down menu next to *Server Runtime* to select a new Mule runtime.
+
[WARNING]
Community runtime does not support all the features available in Enterprise runtime. If you switch runtimes from Enterprise to Community, be aware that some of your configuration may not be supported.
+
image:change_runtimes.png[change_runtimes]

. If changing from Enterprise to Community, Studio displays a warning to advise that is may initiate updates to the namespace, and asks for your permissions to proceed; click *Yes* to continue.
. Studio saves the change. Close the `mule-project.xml` file.

== See Also

* Read a link:https://blogs.mulesoft.com/dev/mule-dev/one-studio/[blog post] explaining hthe Single Studio distribution.
* Want to upgrade to Mule's Enterprise runtime? link:/mule-user-guide/v/3.4/installing-an-enterprise-license[Install an Enterprise license].
* Get comfortable with link:/docs/display/34X/Getting+Started+with+Mule+Studio[Mule Studio].
* Access a list of all the link:/mule-user-guide/v/3.4/studio-update-sites[update sites] available for your version of Mule Studio.
* link:/mule-user-guide/v/3.4/installing[Which version of Mule am I using]?
