mule-user-guide/v/3.5/adding-community-runtime.adoc
= Adding Community Runtime

*Anypoint™ Studio* comes bundled with an embedded Enterprise runtimes with a 30-day Enterprise trial license. You can add Community runtime to your Anypoint Studio instance to build and test applications in Mule's free, open-source runtime environment.

[TIP]
The steps explained in this document are also valid for downloading and installing earlier versions of the Mule runtime, both of Enterprise and Community Edition.

. In Studio, under the *Help* menu, select *Install New Software...*
. In the *Work With* field of the *Install* wizard, use the drop-down menu to select
+
`Mule ESB Runtimes for Anypoint Studio - http://studio.mulesoft.org/r3/studio-runtimes`
+
image:StudioRuntimes.png[StudioRuntimes] +

. Check the box to select **Anypoint Studio Community Runtimes**, then click *Next*.
. Review the *Install Details*, then click *Next* to continue.
. Click to accept the terms and conditions of the license agreement, the click *Finish*. Studio installs the Community runtimes. This may take several minutes to complete depending on the speed of your Internet connection and the number of runtimes you select.
. Click to agree to restart Anypoint Studio.
. When Studio restarts, under the File menu, select *New* > *Mule Project.*
. In the New Project wizard, click to select a CE option (CE stands for Community Edition).
+
image:36CEEEProject.png[36CEEEProject]

[WARNING]
*Are you behind a firewall?* +
If you are on a network with firewall restrictions, you may find that the Studio update sites are blocked and you are unable to download extensions. Allow the following sites on your firewall to allow Studio to connect to the update sites:

Allow on Firewall +
http://studio.mulesoft.org/[http://studio.mulesoft.org] +
http://repository.mulesoft.org/connectors/releases/
http://download.eclipse.org/technology/m2e/releases +
http://download.eclipse.org/eclipse/updates +
http://subclipse.tigris.org/[http://subclipse.tigris.org] +
http://findbugs.cs.umd.edu/eclipse/

== Change Runtime of an Existing Project

. Complete the procedure above to install additional Mule runtimes on your instance of Studio. 
. In the *Package Explorer* in Studio, double-click the `mule-project.xml` file to open it.
. Use the drop-down menu next to *Server Runtime* to select a new Mule runtime.
+

[WARNING]
*Community runtime does not support all the features available in Enterprise runtime.* If you switch runtimes from Enterprise to Community, be aware that some of your configurations may not be supported.
+

image:36DClickMuleProjXML.png[36DClickMuleProjXML]

. If changing from Enterprise to Community, Studio displays a warning to advise that it may initiate updates to the namespace, and asks for your permission to proceed; click *Yes* to continue. 
. Studio saves the change. Close the `mule-project.xml` file. +

== See Also

* Read a link:https://blogs.mulesoft.com/dev/mule-dev/one-studio/[blog post] and/or release strategy explaining the Single Studio distribution.
* Want to upgrade to Mule's Enterprise runtime? link:/mule-user-guide/v/3.7/installing-an-enterprise-license[Install an Enterprise license].
* Get started with link:/mule-user-guide/v/3.7/mule-fundamentals[Mule Fundamentals].
* Access a list of all the link:/mule-user-guide/v/3.6/studio-update-sites[update sites] available for your version of Anypoint Studio.
* link:/mule-user-guide/v/3.6/installing[Which version of Mule am I using?]
